# Clicker_game

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Actions.cpp  Actions.h  Building.h  BuildingsList.cpp  BuildingsList.h  Button.cpp  Button.h  CreditsMenu.cpp  CreditsMenu.h  Gameplay.cpp  Gameplay.h  MainBuilding.cpp  MainBuilding.h  MainMenu.cpp  MainMenu.h  MenuOption.h  Money.cpp  Money.h  RadioButton.cpp  RadioButton.h  Saves.cpp  Saves.h  SelectionForm.cpp  SelectionForm.h  SettingsMenu.cpp  SettingsMenu.h  SideBuilding.cpp  SideBuilding.h  TextFrame.cpp  TextFrame.h  actions.h  common.h  game_objects.h  menu.h  menu_elements.h  utils.h
src/actions/: Actions.cpp  Actions.h
src/game_objects/: Building.h  BuildingsList.h  Button.h  MainBuilding.cpp  MainBuilding.h  Money.h
src/menu/: CreditsMenu.cpp  CreditsMenu.h  Gameplay.cpp  Gameplay.h  MainMenu.cpp  MainMenu.h  MenuOption.h  SettingsMenu.cpp  SettingsMenu.h
src/menu_elements/: RadioButton.cpp  SelectionForm.cpp  SelectionForm.h  TextFrame.cpp  TextFrame.h
src/utils/: Cmd.cpp  Cmd.h  Saves.cpp  Saves.h
